--- a/public/config/config.json
+++ b/public/config/config.json
@@ -9,8 +9,8 @@
 	"NFT_NAME": "EXILE XCIX",
 	"SYMBOL": "XCIX",
 	"MAX_SUPPLY": 999,
-	"WEI_COST": 0,
-	"DISPLAY_COST": 0.0,
+	"WEI_COST": 5000000000000000,
+	"DISPLAY_COST": 0.005,
 	"GAS_LIMIT": 120000,
 	"MARKETPLACE": "Opensea",
 	"MARKETPLACE_LINK": "https://opensea.io/collection/exile-xcix-genesis",
